tests/baselines/reference/internalImportUnInstantiatedModuleMergedWithClassNotReferencingInstanceNoConflict(strict=true).errors.txt
internalImportUnInstantiatedModuleMergedWithClassNotReferencingInstanceNoConflict.ts(2,5): error TS2564: Property 'aProp' has no initializer and is not definitely assigned in the constructor.


==== internalImportUnInstantiatedModuleMergedWithClassNotReferencingInstanceNoConflict.ts (1 errors) ====
    class A {
        aProp: string;
        ~~~~~
!!! error TS2564: Property 'aProp' has no initializer and is not definitely assigned in the constructor.
    }
    module A {
        export interface X { s: string }
    }
    
    module B {
        import Y = A;
    }
    